# wagsley

./: .envrc.example  .gitignore  .gitmodules  README.md  lerna.json  package.json  pyproject.toml
wagsley/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  manage.py  package.json  pyproject.toml  vite.config.js  webpack.config.js
wagsley/accounts/: mutation.py  query.py  schema.py
wagsley/accounts/migrations/: 0001_initial.py
wagsley/admin/: package.json  vite.config.js
wagsley/admin/src/config/: dotenv.example
wagsley/assets/: main.js
wagsley/assets/scss/: _variables.scss  index.scss  puput.scss  style.scss
wagsley/blog/: abstracts.py  hub.py  mutation.py  query.py  schema.py
wagsley/blog/templates/puput/: _entry_card.html  entry_page.html
wagsley/blog/templates/puput/tags/: archives_list.html
wagsley/home/: urls.py  views.py
wagsley/home/management/commands/: populate.py  wp2puput (copy).py  wp2puput.py
wagsley/home/migrations/: 0001_initial.py
wagsley/posts/: models.py  mutation.py  query.py  subscription.py
wagsley/wagsley/: asgi.py  models.py  urls.py  wsgi.py
wagsley/wagsley/iam/: jwt.py  middleware.py
wagsley/wagsley/migrations/avatar/: 0001_initial.py
wagsley/wagsley/migrations/puput/: 0001_initial.py
wagsley/wagsley/schema/: __init__.py
wagsley/wagsley/schema/schemas/: media.graphql  mutation.graphql  post.graphql  query.graphql  subscription.graphql
wagsley/wagsley/schema/types/: __init__.py  mutation.py  post.py  query.py  subscription.py
wagsley/wagsley/settings/: base.py
wagsley/wagsley/templates/: _leftbar.html  _navbar.html  base.html
wagsley/wagsley/templates/puput/: base.html  blog_page.html  entry_page.html
