[tool.poetry]
name = "wagsley-root"
version = "0.1.0"
description = ""
authors = ["kfields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^2.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
